fix: Job listing images on mobile

--- a/src/containers/ListingPage/ListingImageGallery/ListingImageGallery.module.css
+++ b/src/containers/ListingPage/ListingImageGallery/ListingImageGallery.module.css
@@ -206,6 +206,7 @@
 
   color: var(--colorGrey300);
   transition: var(--transitionStyleButton);
+  top: 32px;
 
   &:enabled:hover,
   &:enabled:active {
